# single-gpu-llm-toolkit

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  NEXT_STEPS_FOR_SEAN.md  README.md  async_checkpoint.py  benchmark.py  catch_and_resume.sh  compress_model.py  config.env.example  evaluate.py  expand_model.py  export_onnx.py  generate.py  local_cache_stream.py  lora_train.py  modeling_custom.py  mtp_head.py  oom_guard.sh  preprocess_data.py  pretokenize.py  prune_embeddings_torch.py  prune_vocab.py  pyproject.toml  requirements.txt  rocm_env.py  rocprof_trace.py  serve.py  smart_hipify.py  tensor_parallel.py  tokenization.py  train_cpt.py  train_sft.py  vram_log.py
.github/workflows/: rocm-smoke.yml  selftest.yml
.zcode/plans/: plan-sess_b41bd5f2-2d25-44c8-beaa-b05ddb023dbf.md
backends/: device.py  rocm.py
config/: loader.py  presets.py
experimental/: __init__.py  base.py  ddp.py  env.py  fsdp.py  registry.py  single.py
models/: registry.py
results/: mi300x_run.md
runtime/: probe.py
tests/: conftest.py  test_all.py  test_shell.py
